# VulkanPerfWitchDoc

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  bootstrap-GGP-Ninja.sh  bootstrap-WinVS2017.bat
resources/Linux/: VkLayer_GPUVoyeur_explicit.json  VkLayer_GPUVoyeur_implicit.json  VkLayer_WitchDoctor_explicit.json  VkLayer_WitchDoctor_implicit.json
resources/windows/: VkLayer_GPUVoyeur_explicit.json  VkLayer_GPUVoyeur_implicit.json  VkLayer_WitchDoctor_explicit.json  VkLayer_WitchDoctor_implicit.json
src/: CMakeLists.txt  GPUVoyeur.cpp  GPUVoyeur.h  WitchDoc.cpp  WitchDoc.h  apiLogic.cpp  commandTracker.cpp  commandTracker.h  gvNetwork.cpp  gvUtils.cpp  gvUtils.h  interceptor_objects.h  layerCore.cpp  layerCore.h  layerSettings.cpp  layerSettings.h  loggerThread.cpp
tools/: installLayer.py
